[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valladopy"
version = "0.4.1"
description = "Routines from Fundamentals of Astrodynamics and Applications by David Vallado"
readme = { file = "PYPI_DESCRIPTION.md", content-type = "text/markdown" }
authors = [{name = "David Vallado", email = "davallado@gmail.com"}]
license = {text = "AGPL-3.0"}
dependencies = [
    "numpy>=1.26,<3",
    "pydantic>=2.9,<3",
    "scipy>=1.13,<2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Source Code" = "https://github.com/CelesTrak/fundamentals-of-astrodynamics/tree/main/software/python"
Documentation = "https://REPLACE_ME_WITH_GITHUB_PAGES_OR_READ_THE_DOCS"

[tool.black]
target-version = ['py311', 'py312', 'py313']

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
valladopy = { workspace = true }

[dependency-groups]
dev = [
    "valladopy",
]
